--- a/recipes/napari-lf/meta.yaml
+++ b/recipes/napari-lf/meta.yaml
@@ -22,7 +22,7 @@ requirements:
     - h5py
     - napari
     - numpy
-    - opencv-contrib-python
+    - opencv
     - pyopencl
     - python >=3.7
 
