--- a/recipes/napari-lf/meta.yaml
+++ b/recipes/napari-lf/meta.yaml
@@ -28,9 +28,7 @@ requirements:
 
 test:
   imports:
-    - napari_lf._widgetLF_gui
-    - napari_lf._widgetLF
-    - napari_lf._widgetLF_vals
+    - napari_lf
   commands:
     - pip list
     - pip check
