--- a/recipes/napari-merge-stardist-masks/meta.yaml
+++ b/recipes/napari-merge-stardist-masks/meta.yaml
@@ -18,6 +18,7 @@ requirements:
   host:
     - pip
     - python >=3.8
+    - setuptools-scm
   run:
     - magicgui
     - merge-stardist-masks >=0.1.0
